# banking-es-feature-redis-integration

./: .env  .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  BINARY_SERIALIZATION_MIGRATION_SUMMARY.md  CDC_BATCH_PROCESSING_ANALYSIS.md  CDC_Debezium_Pipeline.md  CDC_INTEGRATION_GUIDE.md  CDC_MIGRATION_GUIDE.md  CDC_OPTIMIZATION_SUMMARY.md  CDC_PERFORMANCE_OPTIMIZATION.md  CDC_PIPELINE_OPTIMIZATION_SUMMARY.md  CDC_TESTING_GUIDE.md  CDC_TIMING_ISSUE_ANALYSIS.md  CREATE_ACCOUNT_CONSISTENCY_OPTIMIZATION.md  Cargo.toml  DEBEZIUM_PERFORMANCE_OPTIMIZATION.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DLQ_Recovery_Implementation.md  Dockerfile  ENHANCED_CDC_INTEGRATION_SUMMARY.md  INDEX_OPTIMIZATION_REPORT.md  OUTBOX_CLEANUP_INTEGRATION_GUIDE.md  PERFORMANCE_ISSUE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_1_CONSOLIDATION_SUMMARY.md  PHASE_2_2_SCALABILITY_ENHANCEMENTS.md  PHASE_2_3_ADVANCED_MONITORING.md  PHASE_2_ADVANCED_OPTIMIZATION.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  POSTGRESQL_OPTIMIZATION_GUIDE.md  PRESENTATION.md  PRESENTATION_SUMMARY.md  README.md  READ_SERVICE_OPTIMIZATION_REPORT.md  REDIS_BINARY_MIGRATION.md  REDIS_LOCK_PERFORMANCE_IMPROVEMENTS.md  RESOURCE_OPTIMIZATION_SUMMARY.md  TROUBLESHOOTING.md  (+61 more)
.cargo/: config.toml
.sqlx/: query-19de2cf1b756061f585b81c3817690c661a9911a43adf424af8d34c36bd33601.json  query-201aea58f4fa50f7b94b9bcaf46a409ea337cff2818255df518c9dc0c57a4c2f.json  query-2163d1f7294c5e6c4c812205983275126b2c5d7ce548e983880e132db5399efc.json  query-5eb98e61350342af8bc9dabccb68ede9e36625ae1ba759b6c483a09325c5baff.json  query-78f23559f9846806ed792218c2de7a1083c81eb7376aaa61b623fc1847d44277.json  query-b72066c15f8a60c696634a476f5bb19f396a9b198f02b0b6e02bd63018dc89cc.json  query-f6070b1618bb28b1df5f37fedfa590da5e57e1aaf2cd7730fe332a3cfcb4a0a9.json
docs/: VERSION_FIELD_EXPLANATION.md
examples/: bulk_insert_example.rs.inactive  bulk_insert_multi_aggregate_example.rs.inactive  cdc_bulk_mode_example.rs.inactive  connection_pool_partitioning_example.rs
logs/: banking-service.log.2025-07-08  debug.log.2025-07-08  error.log.2025-07-08  error.log.2025-07-16  info.log.2025-07-08  warn.log.2025-07-08  warn.log.2025-07-16  warn.log.2025-07-19
migrations/: 0005_add_metadata_column.sql  0006_change_event_data_to_binary.sql  0008_drop_metadata_gin_indexes_on_partitions.sql  001_create_events_table.sql  002_create_accounts_table.sql  003_create_transactions_table.sql  004_add_metadata_column.sql  006_add_unique_constraint_aggregate_id_version_to_events.sql  007_add_unique_constraint_aggregate_id_version_to_events.sql  007_drop_redundant_idx_events_aggregate_version_to_events.sql  008_create_users_table.sql  008_fix_metadata_bytea.sql  010_drop_version_from_account_projections.sql  011_add_error_details_to_kafka_outbox.sql  012_create_kafka_outbox_table.sql  013_create_cdc_outbox_table.down.sql  013_create_cdc_outbox_table.sql  014_migrate_outbox_to_cdc.sql  015_add_deleted_at_to_cdc_outbox.sql  016_optimize_account_projections_indexes.sql  20241201000000_create_materialized_views.sql  20241201000001_add_version_to_account_projections.sql  20241201000002_create_kafka_outbox_table.sql
mobile_app/: .flutter-plugins-dependencies  pubspec.yaml
scripts/: README.md  check_debezium_connector.sh  cleanup_all.sh  cleanup_database.sh  cleanup_database_enhanced.sh  cleanup_kafka_enhanced.sh  cleanup_kafka_topics.sh  create_accounts_table.sql  create_events_table.sql  create_outbox_tables.sql  create_snapshots_table.sql  create_transactions_table.sql  create_users_table.sql  deploy_cdc_migration.sh  migrate_to_binary.ps1  migrate_to_binary.sh  optimize_postgresql.sh  reset_database.sql  run_migration.sh  run_migration_016.sh  setup_fresh_database.sh  start_debezium_connector.sh  stop_debezium_connector.sh
src/: lib.rs  main.rs
static/: index.html
tests/: basic_functionality_test.rs.inactive  batch_performance_test.rs.inactive  cdc_consumer_test.rs.inactive  cdc_integration_test.rs  cdc_integration_test.rs.inactive  cdc_only_test.rs.inactive  cdc_write_batching_test.rs.inactive  cdc_write_read_test.rs.inactive  config_test.rs  consistency_manager_test.rs.inactive  cqrs_integration_tests.rs  cqrs_performance_test.rs  cqrs_performance_test.rs.inactive  debug_cdc_consistency.rs.inactive  debug_projection_sync.rs.inactive  diagnostic_test.rs.inactive  direct_projection_test.rs.inactive  enhanced_stress_test.rs.inactive  high_concurrency_test.rs.inactive  integration_test.rs.inactive  integration_tests.rs  minimal_stress_test.rs.inactive  occ_integration_tests.rs  projection_sync_test.rs.inactive  quick_enhanced_test.rs.inactive  realistic_stress_test.rs.inactive  (+14 more)
(+140 files in other folders)
