[package]
name = "banking-es"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum = "0.8.4"
async-trait = "0.1"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "rust_decimal", "chrono", "uuid", "json", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors","compression-full", "trace"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
litemap = "0.8.0"
zerotrie = "0.2.2"
writeable = "0.6.1"
home = "0.5.11"
tinystr = "0.8.1"
zerofrom = "0.1.5"
zerovec = "0.11.0"
base64ct = "1.6.0"
icu_properties = "2.0.1"
icu_properties_data = "2.0.1"
icu_locale_core = "2.0.0"
icu_collections = "2.0.0"
redis = { version = "0.25", features = ["tokio-comp"] }
dotenv = "0.15"
zstd = "0.13.3"

# Web framework

# Serialization


# Database and persistence

# Concurrency and performance
dashmap = "6.1.0"  # High-performance concurrent HashMap
rayon = "1.7"    # Data parallelism
crossbeam = "0.8" # Lock-free data structures

# Utilities


# Observability


# System
libc = "0.2"

# Optional: Memory allocators for better performance
mimalloc = { version = "0.1", optional = true }
jemalloc = { version = "0.3", optional = true }
mockall = { version = "0.13.1", features = ["nightly"] }
futures = "0.3.31"

[features]
default = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemalloc"]

# Optimize for performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Profile for development with some optimizations
[profile.dev-optimized]
inherits = "dev"
opt-level = 2
debug = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockall = "0.13.1"
