[package]
name = "banking-es"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
async-trait = "0.1"
jsonwebtoken = "9.2"
argon2 = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0.56"
uuid = { version = "1.7", features = ["v4", "serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "rust_decimal", "chrono", "uuid", "json", "sqlite"] }
rdkafka =  { version = "0.37.0"}
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
rand = "0.8.5"
strum = "0.26"
strum_macros = "0.26"
rand_chacha = "0.3"
# Serialization
bincode = "1.3"

# Database and persistence

# Concurrency and performance
rayon = "1.7"    # Data parallelism
crossbeam = "0.8" # Lock-free data structures

# Utilities


# Observability
tracing-appender = "0.2"

# System
libc = "0.2"
windows = { version = "0.48", features = ["Win32_Networking_WinSock"] }

# Optional: Memory allocators for better performance
mimalloc = { version = "0.1", optional = true }
jemalloc = { version = "0.3", optional = true }
futures = "0.3.31"
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.21.0" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
num_cpus = "1.16"

[features]
default = []
tokio_allow_from_blocking_fd = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemalloc"]

# Optimize for performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Profile for development with some optimizations
[profile.dev-optimized]
inherits = "dev"
opt-level = 2
debug = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockall = "0.13.1"
banking-es = { path = "." }
once_cell = "1.19"
